updated contact information

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -1215,27 +1214,27 @@
               <div class="contact-icon">📧</div>
               <div>
                 <h4>Email Us</h4>
-                <p>hello@axiumfeedback.com</p>
+                <p>William@axiumfeedback.com</p>
               </div>
             </div>
             <div class="contact-method">
               <div class="contact-icon">📞</div>
               <div>
-                <h4>Call Us</h4>
-                <p>+1 (555) 123-4567</p>
+                <h4>Connect With Us</h4>
+                <p>219-393-9125</p>
               </div>
             </div>
             <div class="contact-method">
               <div class="contact-icon">📍</div>
               <div>
                 <h4>Location</h4>
-                <p>Chicago, Illinois, US</p>
+                <p>North west, Indiana, US</p>
               </div>
             </div>
           </div>
         </div>
         <div>
-          <form id="contactForm">
+          <form id="contactForm" action="https://formsubmit.co/william@axiomfeedback.com" method="POST">
             <div class="form-group">
               <label for="name">Name *</label>
               <input type="text" id="name" name="name" required placeholder="Your full name">
